<resources>
    <!-- FragmentRegisterNewUser -->
    <string name="cabecalho_login">Olá Seja Bem-Vindo!!</string>
    <string name="cadastro_descricao">Realize seu cadastro e começe a explorar o nosso universo!!</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirma Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- FragmentLogin -->
    <string name="descricao_login">Entre com sua senha ou realize seu cadastro.</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>